@@ -162,6 +162,7 @@ Send one product we don't have in stock::
     >>> outgoing_move.product = negative_product
     >>> outgoing_move.uom = unit
     >>> outgoing_move.quantity = 1
+    >>> outgoing_move.unit_price = Decimal('28')
     >>> outgoing_move.from_location = storage_loc
     >>> outgoing_move.to_location = customer_loc
     >>> outgoing_move.planned_date = today
@@ -181,6 +182,7 @@ Return one product to the supplier::
     >>> outgoing_move.product = negative_product
     >>> outgoing_move.uom = unit
     >>> outgoing_move.quantity = 1
+    >>> outgoing_move.unit_price = Decimal('28')
     >>> outgoing_move.from_location = storage_loc
     >>> outgoing_move.to_location = supplier_loc
     >>> outgoing_move.planned_date = today
@@ -200,6 +202,7 @@ Receive one unit of the product with negative stock so the stock stays negative:
     >>> incoming_move.product = negative_product
     >>> incoming_move.uom = unit
     >>> incoming_move.quantity = 1
+    >>> outgoing_move.unit_price = Decimal('28')
     >>> incoming_move.from_location = supplier_loc
     >>> incoming_move.to_location = storage_loc
     >>> incoming_move.planned_date = today
@@ -221,6 +224,7 @@ Receive two units of the product so the stock becomes positive::
     >>> incoming_move.product = negative_product
     >>> incoming_move.uom = unit
     >>> incoming_move.quantity = 2
+    >>> outgoing_move.unit_price = Decimal('28')
     >>> incoming_move.from_location = supplier_loc
     >>> incoming_move.to_location = storage_loc
     >>> incoming_move.planned_date = today
