@@ -1,3 +1,4 @@
+* Don't set default unit price on stock move
 * Prefer to pick product from the source location
 * Change move attribute of ShipmentReport for a method
 * Rename inventory count quantity_resulting to total_quantity
